primitives/runtime-interface/tests/ui/pass_by_inner_with_two_fields.stderr
error: Only newtype/one field structs are supported by `PassByInner`!
 --> $DIR/pass_by_inner_with_two_fields.rs:3:10
  |
3 | #[derive(PassByInner)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
