primitives/runtime-interface/tests/ui/pass_by_inner_with_two_fields.rs
use sp_runtime_interface::pass_by::PassByInner;

#[derive(PassByInner)]
struct Test {
	data: u32,
	data2: u32,
}

fn main() {}
